Update demo warning block and fix z-index header above blade elements

--- a/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_cosmetic.sass
+++ b/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_cosmetic.sass
@@ -15,12 +15,15 @@
 .alt-description
   color: #43b0e6 !important
 .demo-warning
-  background: $baseColor
+  align-items: center
+  background: $redBg
   color: $whiteColor
+  display: flex
   font-family: $font
   font-size: 13px
+  justify-content: center
+  height: 30px
   left: 0
-  padding: 5px 0
   position: absolute
   right: 0
   text-align: center
