--- a/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_header.sass
+++ b/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_header.sass
@@ -8,7 +8,7 @@
   right: 0
   top: 0
   transition: all .25s ease-in-out
-  z-index: 100
+  z-index: 500
   &__info
     border-left: 1px solid $headerBrd
     border-right: 1px solid $headerBrd
